[gd_scene load_steps=9 format=2]

[ext_resource path="res://Levels/EndScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/tileset.tres" type="TileSet" id=2]
[ext_resource path="res://assets/Unique.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/audio/win.ogg" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 20
outline_color = Color( 0.815686, 0.0980392, 0.0980392, 1 )
font_data = ExtResource( 3 )

[node name="EndScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( 131076, 6, 0, 131077, 6, 0, 131078, 6, 0, 131079, 6, 0, 131080, 6, 0, 131081, 6, 0, 131082, 6, 0, 131083, 6, 0, 196612, 6, 0, 196613, 14, 0, 196614, 14, 0, 196615, 14, 0, 196616, 14, 0, 196617, 14, 0, 196618, 14, 0, 196619, 6, 0, 262148, 6, 0, 262149, 14, 0, 262150, 14, 0, 262151, 14, 0, 262152, 14, 0, 262153, 14, 0, 262154, 14, 0, 262155, 6, 0, 327684, 6, 0, 327685, 14, 0, 327686, 14, 0, 327687, 14, 0, 327688, 14, 0, 327689, 14, 0, 327690, 14, 0, 327691, 6, 0, 393220, 6, 0, 393221, 6, 0, 393222, 6, 0, 393223, 6, 0, 393224, 6, 0, 393225, 6, 0, 393226, 6, 0, 393227, 6, 0 )

[node name="Label" type="Label" parent="."]
margin_top = -30.0
margin_right = 1024.0
margin_bottom = 600.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.815686, 0.0980392, 0.0980392, 1 )
text = "Game Over"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="LineEdit" type="LineEdit" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 460.0
margin_top = 200.0
margin_right = -454.0
margin_bottom = 250.0
custom_fonts/font = SubResource( 2 )
text = "AAA"
align = 1
max_length = 3
caret_blink = true

[node name="Label2" type="Label" parent="."]
visible = false
margin_left = 300.0
margin_top = 500.0
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "New high score!
Enter name:"
align = 2

[node name="Button" type="Button" parent="."]
visible = false
anchor_right = 1.0
margin_left = 600.0
margin_top = 510.0
margin_right = -1012.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 4 )
text = "OK"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
